--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,7 @@ body, input, button {
 
 
 header {
-    width: 100%;
+    width: 98%;
     height: 80px;
     position: fixed;
     padding: 15px;
@@ -18,10 +18,13 @@ header {
 }
 
 header input {
-    width: 95%;
+    width: 100%;
     height: 50px;
     float: left;
     color:white;
+    font-size: 15px;
+    font-weight: 400;
+    text-indent: 18px;
     background: rgba(255,255,255,0.2);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -40,4 +43,36 @@ header input {
 
 header input::-webkit-input-placeholder{
     color:rgba(255,255,255,0.75);
+}
+
+header input:-moz-input-placeholder{
+    color:rgba(255,255,255,0.75);
+}
+
+header input::-moz-input-placeholder{
+    color:rgba(255,255,255,0.75);
+}
+
+header input:-ms-input-placeholder{
+    color:rgba(255,255,255,0.75);
+}
+
+header button {
+    width:50px;
+    height: 50px;
+    padding-right: 10px;
+    position: absolute;
+    top:15px;
+    right:15px;
+    z-index: 2;
+    border-radius: 25px;
+    background: white;
+    border:0;
+    box-shadow: none;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -ms-appearance: none;
+    -o-appearance:none;
+    appearance: none;
 }
